fix: gap around search-bar button and active submit button

--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -126,6 +126,13 @@
   margin: 8px 0 0 0;
 }
 
+.popup__submit-button_active {
+  background-color: #2F71E5;
+  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+  border: none;
+  color: #fff;
+}
+
 .popup__go-elsewhere {
   font-family: 'Inter';
   font-size: 14px;
